Add card background color to AI Settings page
Screenshots: https://imgur.com/a/fILvL2x

Bug: b/350668580
Change-Id: I97b858f31fee1ab40697e2f5f858a96b8c2ec32a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5851135
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/panels/settings/aiSettingsTab.css
+++ b/front_end/panels/settings/aiSettingsTab.css
@@ -42,6 +42,7 @@
   line-height: var(--sys-typescale-body5-line-height);
   min-width: var(--sys-size-28);
   max-width: var(--sys-size-35);
+  background-color: var(--app-color-card-background);
 }
 
 .accordion-header {
