[RPP Observations] Move environment recs to collapsible section
https://screenshot.googleplex.com/8enuBGtDNhAR8YR

Bug: 362252927
Change-Id: I019e154fd1ad8d4155b95ae9ea30371e84190a2c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5851652
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -177,7 +177,6 @@
 .interaction-info {
   width: var(--sys-typescale-body4-line-height);
   height: var(--sys-typescale-body4-line-height);
-  cursor: help;
   margin-right: 6px;
 }
 
@@ -235,10 +234,23 @@ x-link { /* stylelint-disable-line selector-type-no-unknown */
   margin-top: 8px;
 }
 
-.field-data-hint {
+.setting-hint {
   margin-left: 6px;
   vertical-align: bottom;
-  cursor: help;
   height: 18px;
   width: 18px;
+}
+
+.environment-recs {
+  margin: 12px 0;
+}
+
+.environment-recs > summary {
+  font-weight: var(--ref-typeface-weight-medium);
+  margin-bottom: 4px;
+}
+
+.environment-recs-list {
+  margin: 0;
+  padding-left: 20px;
 }
