[Freestyler] Add indeterminate spinner loading indicator
Bug: 361286171
Change-Id: Iae1e92ab59744eca85ec020102433c4e4fc60e94
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5836651
Commit-Queue: Samiya Caur <samiyac@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -203,14 +203,15 @@
   .indicator {
     color: var(--sys-color-green-bright);
 
-    &.loading {
-      color: var(--sys-color-blue-bright);
-    }
-
     &.paused,
     &.canceled {
       color: var(--sys-color-on-surface-subtle);
     }
+  }
+
+  devtools-spinner {
+    margin: var(--sys-size-4);
+    vertical-align: sub;
   }
 
   .summary {
