[Console Insights] Add spinner as a loading indicator while insights are being generated
Bug: 359473711
Change-Id: Id9a9b3c17b5791e01028467b62782d9ef13c6af0
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5836637
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Samiya Caur <samiyac@chromium.org>

--- a/front_end/panels/explain/components/consoleInsight.css
+++ b/front_end/panels/explain/components/consoleInsight.css
@@ -82,6 +82,10 @@ header:focus-visible {
 }
 
 header > .filler {
+  display: flex;
+  flex-direction: row;
+  gap: var(--sys-size-5);
+  align-items: center;
   flex: 1;
 }
 
