[Freestyler] Fix spinner to match icons size
Bug: 361286171
Change-Id: I1c36a336b177fb2f9207f1652c12b6f6310b13a8
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5853015
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -210,8 +210,9 @@
   }
 
   devtools-spinner {
-    margin: var(--sys-size-4);
-    vertical-align: sub;
+    width: var(--sys-size-9);
+    height: var(--sys-size-9);
+    padding: var(--sys-size-2);
   }
 
   .summary {
