[RPP Observations] Use display: none on hidden tooltip
Bug: None
Change-Id: I3b762cb0dad0ab0665102b7a1db0009c43ba368d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5855739
Reviewed-by: Adriana Ixba <aixba@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/metricCard.css
+++ b/front_end/panels/timeline/components/metricCard.css
@@ -120,6 +120,7 @@
 }
 
 .tooltip {
+  display: none;
   visibility: hidden;
   transition-property: visibility;
   width: min(var(--tooltip-container-width, 350px), 350px);
