[RPP Observations] Solid focus outline on metric card values
Bug: 362545054
Change-Id: I17cd4f7a9f2058141f523bb6101dfd77deb6f41b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5855582
Reviewed-by: Adriana Ixba <aixba@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/metricCard.css
+++ b/front_end/panels/timeline/components/metricCard.css
@@ -27,6 +27,10 @@
   margin-bottom: 8px;
 }
 
+.metric-values-section:focus-visible {
+  outline: 2px solid -webkit-focus-ring-color;
+}
+
 .metric-source-block {
   flex: 1;
 }
