[Freestyler] Do not shown chevron-down when there is no thought to expand to
Fixed: 366179736
Change-Id: I23864e976d31b9430f49042ba22bbc4924ac3bcd
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5854045
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -189,6 +189,14 @@
   border-radius: var(--sys-size-6);
   position: relative;
 
+  &.empty {
+    pointer-events: none;
+
+    .arrow {
+      display: none;
+    }
+  }
+
   &:not(&[open]):hover::after {
     content: "";
     height: 100%;
