[Console Insights] Fix various ARIA issues
Bug: http://b/365795126
Change-Id: Ieecda7d370bb2e3cf3e41892dedebd9103459eda
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5854248
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/panels/explain/components/consoleInsight.css
+++ b/front_end/panels/explain/components/consoleInsight.css
@@ -94,6 +94,10 @@ header > .filler {
   background-color: var(--sys-color-surface4);
   padding: var(--sys-size-8);
   font-weight: var(--ref-typeface-weight-medium);
+
+  h3 {
+    font: inherit;
+  }
 }
 
 .reminder-items {
