--- a/front_end/panels/settings/aiSettingsTab.css
+++ b/front_end/panels/settings/aiSettingsTab.css
@@ -8,6 +8,12 @@
   box-sizing: border-box;
 }
 
+header > h1 {
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0;
+}
+
 .shared-disclaimer {
   background: linear-gradient(135deg, var(--sys-color-gradient-primary), var(--sys-color-gradient-tertiary));
   border-radius: var(--sys-size-5);
@@ -23,6 +29,7 @@
 
 .disclaimer-list-header {
   font: var(--sys-typescale-body5-medium);
+  margin: 0;
 }
 
 .disclaimer-list {
@@ -81,6 +88,8 @@
   font-weight: var(--ref-typeface-weight-medium);
   color: var(--sys-color-on-surface);
   padding-top: var(--sys-size-4);
+  margin: 0;
+  font-size: inherit;
 }
 
 .setting-description {
@@ -94,6 +103,11 @@
 
 .setting-card {
   padding: var(--sys-size-6) 0;
+
+  h2 {
+    margin: 0;
+    font: inherit;
+  }
 }
 
 .divider {
