[Freestyler] Update inline snippet background color inside thinking step
Fixed: 364591829
Change-Id: Iba79570c766f3ea4c31d0fb3b4519f6c18372290
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5854249
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -214,6 +214,10 @@
     }
   }
 
+  devtools-markdown-view {
+    --code-background-color: var(--sys-color-surface1);
+  }
+
   devtools-icon {
     vertical-align: bottom;
   }
