[Freestyler] Fix abort messages and state
Provides the correct UI string and update the last thinking step
similar to the Side-Effect cancel

Bug: 361745529
Change-Id: I2efce087f090eaaa0d49cce7b6a0f20af39c6dd8
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5854046
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -171,11 +171,15 @@
     }
   }
 
-  & .actions {
+  .actions {
     display: flex;
     gap: var(--sys-size-8);
     justify-content: space-between;
     align-items: flex-end;
+  }
+
+  .aborted {
+    color: var(--sys-color-state-disabled);
   }
 }
 
