[DrJones] Update to Freestyler panel for DrJones Network Agent
Bug: 362422969
Change-Id: I60e4948d80af8a7171aa5dc10403a08d1877e09b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5849956
Commit-Queue: Samiya Caur <samiyac@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -38,6 +38,16 @@
     font: var(--sys-typescale-body4-size);
     border: var(--sys-size-1) solid var(--sys-color-divider);
     border-radius: var(--sys-shape-corner-extra-small);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: var(--sys-size-32);
+
+    devtools-icon[name="file-script"] {
+      color: var(--icon-file-script);
+      vertical-align: top;
+      margin-right: var(--sys-size-1);
+    }
   }
 
   .resource-link.not-selected {
