Update learn more and info icons to buttons in Settings
Bug:none
Change-Id: I59afc8fa7e83f30f4c06aad61e2a9294ac225444
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5854044
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/settings/frameworkIgnoreListSettingsTab.css
+++ b/front_end/panels/settings/frameworkIgnoreListSettingsTab.css
@@ -26,8 +26,10 @@
   min-height: 30px;
 }
 
-.ignore-list-option devtools-icon {
-  margin-bottom: -1px;
+.ignore-list-option devtools-button {
+  position: relative;
+  top: var(--sys-size-2);
+  margin-left: var(--sys-size-2);
 }
 
 .ignore-list-option-group {
