--- a/front_end/ui/components/settings/settingCheckbox.css
+++ b/front_end/ui/components/settings/settingCheckbox.css
@@ -30,16 +30,15 @@ p {
 
 .disabled-reason {
   box-sizing: border-box;
-  margin-left: 3px;
-  width: 16px;
-  height: 16px;
+  margin-left: var(--sys-size-2);
+  width: var(--sys-size-9);
+  height: var(--sys-size-9);
 }
 
-#learn-more {
+.learn-more {
+  position: relative;
   margin-left: var(--sys-size-2);
-
-  & > .link-icon {
-    width: var(--sys-size-8);
-    height: var(--sys-size-8);
-  }
+  top: var(--sys-size-2);
+  width: var(--sys-size-9);
+  height: var(--sys-size-9);
 }
