Limit the width of linked DOM nodes
Bug:none
Change-Id: Ie6978b92e8ea2cb5f09a9ee3c8bf868515ab9112
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5862658
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/elements/domLinkifier.css
+++ b/front_end/panels/elements/domLinkifier.css
@@ -14,6 +14,11 @@
   pointer-events: auto;
   outline-offset: 2px;
 
+  /* If the element has lots of classes, don't let the label get too wide */
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 550px;
+
   &:focus-visible {
     outline-width: unset;
   }
