[RPP] Update the icons to new standard
Since the IconData is deprecated

Bug: none
Change-Id: I820b1ea06a4a2d5208a62011f771387f9e71365d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5860397
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>
Auto-Submit: Nancy Li <nancyly@chromium.org>
Commit-Queue: Nancy Li <nancyly@chromium.org>

--- a/front_end/panels/timeline/overlays/components/entryLabelOverlay.css
+++ b/front_end/panels/timeline/overlays/components/entryLabelOverlay.css
@@ -49,4 +49,8 @@
 
 .user-created-icon {
   margin: var(--sys-size-3);
+  color: var(--sys-color-token-variable);
+  /* USER_CREATED_ICON_WIDTH */
+  width: 16px;
+  height: 16px;
 }
