--- a/front_end/panels/timeline/components/sidebarAnnotationsTab.css
+++ b/front_end/panels/timeline/components/sidebarAnnotationsTab.css
@@ -52,6 +52,8 @@
   padding: 4px 8px;
   border-radius: 10px;
   font-weight: bold;
+  /* The identifier text will always be black to match the event title in the flame chart */
+  color: var(--app-color-performance-sidebar-label-text);
 
   &.time-range {
     background-color: var(--app-color-performance-sidebar-time-range);
