--- a/front_end/panels/timeline/overlays/components/entryLabelOverlay.css
+++ b/front_end/panels/timeline/overlays/components/entryLabelOverlay.css
@@ -12,13 +12,13 @@
   transform: translate(-50%);
   display: flex;
   flex-direction: column;
-  color: var(--color-selected-option);
   align-items: center;
 }
 
 .input-field {
+  background-color: var(--color-background-inverted);
+  color: var(--color-background);
   pointer-events: auto;
-  background-color: var(--sys-color-token-variable);
   border-radius: var(--sys-shape-corner-extra-small);
   white-space: nowrap;
   padding: var(--sys-size-3) var(--sys-size-4);
@@ -28,8 +28,9 @@
 }
 
 .input-field:focus {
-  background-color: var(--color-selected-option);
-  color: var(--sys-color-token-variable);
+  background-color: var(--color-background);
+  color: var(--color-background-inverted);
+  outline: 2px solid var(--color-background-inverted);
 }
 
 .connectorContainer {
@@ -49,7 +50,7 @@
 
 .user-created-icon {
   margin: var(--sys-size-3);
-  color: var(--sys-color-token-variable);
+  color: var(--color-background-inverted);
   /* USER_CREATED_ICON_WIDTH */
   width: 16px;
   height: 16px;
