--- a/front_end/ui/legacy/themeColors.css
+++ b/front_end/ui/legacy/themeColors.css
@@ -375,6 +375,7 @@
   --app-color-performance-sidebar-entry-label: var(--ref-palette-purple80);
   --app-color-performance-sidebar-time-range: var(--ref-palette-pink60);
   --app-color-performance-sidebar-time-range-text: rgb(255 255 255);
+  --app-color-performance-sidebar-label-text: rgb(0 0 0);
 
   /**
    * Colors for cards.
