[Console Insights] Make disclaimer wider
Screenshots: https://imgur.com/a/s9RF7pz

Bug: 367298061
Change-Id: I17f5287ad86fd129269525b80d3e2c1db9f00334
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5865378
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/panels/explain/components/consoleInsight.css
+++ b/front_end/panels/explain/components/consoleInsight.css
@@ -207,8 +207,13 @@ textarea {
 
 .buttons {
   display: flex;
-  flex-wrap: wrap;
   gap: 5px;
+}
+
+@media (max-width: 500px) {
+  .buttons {
+    flex-wrap: wrap;
+  }
 }
 
 main .buttons {
@@ -222,7 +227,6 @@ main .buttons {
   font-size: 11px;
   align-items: flex-start;
   flex-direction: column;
-  max-width: 360px;
 }
 
 .link {
