[DrJones] Have cursor as pointer when hovering over selected network request in the AI Assistant panel.
This was existing behavior for cursor when it was hovering over selected element in case of Freestyler panel.

Bug: 368508791
Change-Id: I229c0ec40412bead453f8e2f244a2cdc94230d5a
Fixed: 368508791
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5872317
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Samiya Caur <samiyac@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -43,6 +43,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     max-width: var(--sys-size-32);
+    cursor: pointer;
 
     devtools-icon[name="file-script"] {
       color: var(--icon-file-script);
