[Freestyler] Update `abort` and `send` icons
* Update the `send.svg` to use correct asset and update its
usage in both Freestyler & Protocol Monitor.

Fixed: 367651520, 368259376
Change-Id: I41a0b9c349ee329fef138c84c4c4434f99459769
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5893764
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -76,7 +76,7 @@
 .chat-input {
   --right-padding:
     calc(
-      var(--sys-size-4) + 26px
+      var(--sys-size-3) + 26px
     ); /* Gap between the button and the edge + icon's width */
 
   scrollbar-width: none;
@@ -114,7 +114,8 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  padding: var(--sys-size-4) var(--sys-size-4);
+  padding-bottom: 3px;
+  padding-right: var(--sys-size-3);
 }
 
 .disclaimer {
