[Freestyler] Use `--app` colors for the shadow gradient
Bug: 369833647
Change-Id: I5fc9aac033227a53743734c34df6f37d968a2a7c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5895591
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -219,7 +219,7 @@
     top: 0;
     visibility: var(--visibility-if-can-scroll, hidden);
     animation-range: var(--sys-size-6) var(--sys-size-11); /* stylelint-disable-line property-no-unknown */
-    background: radial-gradient(farthest-side at 0 50%, var(--color-background-inverted-opacity-30), var(--color-background-inverted-opacity-0));
+    background: radial-gradient(farthest-side at 0 50%, var(--app-color-scroll-area-shadow-start), transparent);
   }
 
   .suggestions::after {
@@ -227,7 +227,7 @@
     visibility: var(--visibility-if-can-scroll, hidden);
     animation-direction: reverse;
     animation-range: calc(100% - var(--sys-size-11)) calc(100% - var(--sys-size-6)); /* stylelint-disable-line property-no-unknown */
-    background: radial-gradient(farthest-side at 100% 50%, var(--color-background-inverted-opacity-30), var(--color-background-inverted-opacity-0));
+    background: radial-gradient(farthest-side at 100% 50%, var(--app-color-scroll-area-shadow-start), transparent);
   }
 
   .aborted {
