[RPP] Slight UI adjustments to layout shift details
This adjusts the table so its easier to work with,
and moves the insight chip to the right of the details pane.
Some small code cleanup with renaming.

Bug:368521181
Change-Id: I1252f1efce3d4e87c64c3e510e8067cb2820c212
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5893898
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Adriana Ixba <aixba@chromium.org>

--- a/front_end/panels/timeline/components/layoutShiftDetails.css
+++ b/front_end/panels/timeline/components/layoutShiftDetails.css
@@ -4,7 +4,7 @@
  * found in the LICENSE file.
  */
 
-.timeline-details-chip-decorative-title {
+.insight-chip {
   border: var(--sys-size-1) solid var(--sys-color-primary);
   border-radius: var(--sys-shape-corner-extra-small);
   display: flex;
@@ -19,12 +19,14 @@
   }
 }
 
-.layout-shift-details-title {
+.layout-shift-details-title,
+.cluster-details-title {
   padding: var(--sys-size-5);
   display: flex;
   align-items: center;
 
-  .layout-shift-event-chip {
+  .layout-shift-event-title,
+  .cluster-event-title {
     background-color: var(--app-color-rendering);
     width: var(--sys-size-6);
     height: var(--sys-size-6);
@@ -35,23 +37,28 @@
 }
 
 .layout-shift-details-table {
-  width: 90%;
-  border-collapse: separate;
-  border-spacing: 0;
-  margin-top: var(--sys-size-5);
   margin-left: var(--sys-size-5);
   text-align: left;
+  border-block: var(--sys-size-1) solid var(--sys-color-divider);
+  border-collapse: collapse;
 
-  .table-title th {
-    font-weight: var(--ref-typeface-weight-medium);
-    border-block: var(--sys-size-1) solid var(--sys-color-divider);
-    padding: 0;
+  th,
+  td {
+    padding: 0 var(--sys-size-4);
   }
 
-  .culprit-types tr,
-  .culprits tr {
+  tr {
+    width: 100%;
+  }
+}
+
+.table-title {
+  th {
+    font-weight: var(--ref-typeface-weight-medium);
+  }
+
+  tr {
     border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
-    border-spacing: 0;
   }
 }
 
@@ -63,21 +70,6 @@
 
 .devtools-link.invalid-link {
   color: var(--sys-color-state-disabled);
-}
-
-.cluster-details-title {
-  padding: var(--sys-size-5);
-  display: flex;
-  align-items: center;
-
-  .cluster-event-chip {
-    background-color: var(--app-color-rendering);
-    width: var(--sys-size-6);
-    height: var(--sys-size-6);
-    border: var(--sys-size-1) solid var(--sys-color-divider);
-    display: inline-block;
-    margin-right: var(--sys-size-3);
-  }
 }
 
 .details-row {
@@ -100,4 +92,30 @@
   text-overflow: ellipsis;
   overflow: hidden;
   padding: 0 var(--sys-size-3);
+}
+
+.layout-shift-summary-details,
+.layout-shift-cluster-summary-details {
+  display: inline-flex;
+  flex-direction: row;
+}
+
+.event-details {
+  width: 70%;
+}
+
+.culprits {
+  overflow: hidden;
+
+  .culprit {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .culprit-type {
+    display: flex;
+    justify-content: flex-start;
+  }
 }
