--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -174,6 +174,10 @@
       height: var(--sys-size-9);
       width: var(--sys-size-9);
     }
+
+    h2 {
+      font: var(--sys-typescale-body4-bold);
+    }
   }
 
   .actions {
@@ -420,6 +424,10 @@ button.link {
           var(--sys-color-gradient-tertiary)
         );
     }
+
+    h2 {
+      font: var(--sys-typescale-headline4);
+    }
   }
 
   .suggestions {
@@ -445,7 +453,12 @@ button.link {
     border-radius: var(--sys-shape-corner-extra-small);
     width: var(--sys-size-9);
     height: var(--sys-size-9);
-    background: linear-gradient(135deg, var(--sys-color-gradient-primary), var(--sys-color-gradient-tertiary));
+    background:
+      linear-gradient(
+        135deg,
+        var(--sys-color-gradient-primary),
+        var(--sys-color-gradient-tertiary)
+      );
     margin-right: var(--sys-size-5);
 
     devtools-icon {
