--- a/front_end/panels/timeline/overlays/components/entriesLinkOverlay.css
+++ b/front_end/panels/timeline/overlays/components/entriesLinkOverlay.css
@@ -4,10 +4,30 @@
  * found in the LICENSE file.
  */
 
-:host {
+.connectorContainer {
   display: flex;
   width: 100%;
   height: 100%;
+}
+
+.entry-wrapper {
+  pointer-events: none;
+  position: absolute;
+  display: block;
+  border: 2px solid var(--color-text-primary);
+  box-sizing: border-box;
+
+  &.cut-off-top {
+    border-top: none;
+  }
+
+  &.cut-off-bottom {
+    border-bottom: none;
+  }
+}
+
+.entry-is-not-source {
+  border: 2px dashed var(--color-text-primary);
 }
 
 .create-link-icon {
