RPP: improve aria label on delete button for annotations
And as a drive-by, remove the shortcut part of the tutorial. We don't
need that there along with the descriptive text.

Fixed: 369211754
Change-Id: I280b633e2d1a2a67a5244f95a5da1f1651c19da0
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5898876
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/panels/timeline/components/sidebarAnnotationsTab.css
+++ b/front_end/panels/timeline/components/sidebarAnnotationsTab.css
@@ -99,21 +99,6 @@
 }
 
 .tutorial-title,
-.tutorial-description,
-.tutorial-shortcut {
+.tutorial-description {
   margin: 5px 0;
-}
-
-.tutorial-shortcut {
-  padding: 0.1em 0.6em;
-  border: 1px solid var(--sys-color-neutral-outline);
-  font-size: 11px;
-  background-color: var(--sys-color-neutral-container);
-  color: var(--sys-color-on-surface);
-  border-radius: 3px;
-  display: inline-block;
-  margin: 0 0.1em;
-  text-shadow: 0 1px 0 var(--sys-color-cdt-base-container);
-  line-height: 1.5;
-  white-space: nowrap;
 }
