[Freestyler] Update background color of CodeBlock
* By default, it'll be `surface2`
* Inside thinking step, it'll be `surface`

Fixed: 369511667, 370465062
Change-Id: Ic44a3f75b2d557b14e3b82df7c1fa536dfeb6178
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5898919
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -279,6 +279,18 @@
   }
 }
 
+.js-code-output {
+  devtools-code-block {
+    --code-block-max-code-height: 50px;
+  }
+}
+
+.context-details {
+  devtools-code-block {
+    --code-block-max-code-height: 80px;
+  }
+}
+
 .step {
   width: fit-content;
   background-color: var(--sys-color-surface3);
@@ -360,6 +372,10 @@
 
     p {
       margin-bottom: var(--sys-size-5);
+    }
+
+    devtools-code-block {
+      --code-block-background-color: var(--sys-color-surface1);
     }
   }
 }
@@ -485,18 +501,6 @@ button.link {
   /* devtools-code-block adds `margin-top: 8px` however we want the margin between `.action-result` and `.js-code-output` to be 2px
   that's why we use -6px here. */
   margin-bottom: -6px;
-}
-
-.js-code-output {
-  devtools-code-block {
-    --max-code-height: 50px;
-  }
-}
-
-.context-details {
-  devtools-code-block {
-    --max-code-height: 80px;
-  }
 }
 
 .error-step {
