RPP: add feedback button for Insights
https://screenshot.googleplex.com/5wihjru5ZQrt75P
https://screenshot.googleplex.com/yWUTNHziMzVxUdg

Fixed: 369767181
Change-Id: I4cc23ed09c4c92ff867e6df092dde0f88123a4e7
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5904937
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/sidebarInsightsTab.css
+++ b/front_end/panels/timeline/components/sidebarInsightsTab.css
@@ -13,8 +13,7 @@
 .insight-sets-wrapper {
   display: flex;
   flex-flow: column nowrap;
-  align-items: stretch;
-  height: 100%;
+  flex-grow: 1; /* so it fills the available vertical height in the sidebar */
 
   details {
     flex-grow: 0;
@@ -55,4 +54,30 @@
   width: max-content;
   margin-top: 10px;
   margin-left: 10px;
+}
+
+.feedback-wrapper {
+  position: relative;
+  padding-left: var(--sys-size-6);
+  padding-bottom: var(--sys-size-6);
+
+  .tooltip {
+    visibility: hidden;
+    transition-property: visibility;
+    position: absolute;
+    bottom: 35px; /* height of button + a little extra padding */
+    width: 90%;
+    max-width: 300px;
+    left: var(--sys-size-6);
+    z-index: 1;
+    box-sizing: border-box;
+    padding: var(--sys-size-5) var(--sys-size-6);
+    border-radius: var(--sys-shape-corner-small);
+    background-color: var(--sys-color-cdt-base-container);
+    box-shadow: var(--drop-shadow-depth-3);
+  }
+
+  devtools-button:hover + .tooltip {
+    visibility: visible;
+  }
 }
