--- a/front_end/panels/timeline/components/sidebarInsightsTab.css
+++ b/front_end/panels/timeline/components/sidebarInsightsTab.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-flow: column nowrap;
   flex-grow: 1; /* so it fills the available vertical height in the sidebar */
+  margin-top: var(--sys-size-6);
 
   details {
     flex-grow: 0;
@@ -52,8 +53,8 @@
 
 .insights-category-select {
   width: max-content;
-  margin-top: 10px;
-  margin-left: 10px;
+  margin-top: var(--sys-size-6);
+  margin-left: var(--sys-size-6);
 }
 
 .feedback-wrapper {
