[RPP] Handle bad images and videos for lcp discovery insight
-This only renders the img thumbnail for valid lcp image. Also doesn't
render a thumbnail if its a video
- Some drive by UI fixes
-Adds a clickable reference to the lcp request

https://screenshot.googleplex.com/7LiEj7z2Vqi2SFD
https://screenshot.googleplex.com/7YC57wXtLTCnxUe

Bug:368155446
Change-Id: I25030fb552917c414a67da5081a029a548551e08
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5907381
Reviewed-by: Adam Raine <asraine@chromium.org>
Commit-Queue: Adriana Ixba <aixba@chromium.org>

--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -116,11 +116,15 @@ dd.dl-title {
 }
 
 .element-img {
-  max-width: 90%;
+  max-width: 20%;
+  max-height: 20%;
+  padding-inline: var(--sys-size-3);
 }
 
 .element-img-details {
   font: var(--sys-typescale-body4-regular);
+  display: flex;
+  flex-direction: column;
 
   .element-img-details-size {
     color: var(--color-text-secondary);
@@ -162,4 +166,18 @@ ul.insight-icon-results {
 
 .devtools-link.invalid-link {
   color: var(--sys-color-state-disabled);
+}
+
+.lcp-element {
+  display: inline-flex;
+  align-items: center;
+}
+
+.insight-results:not(:last-child) {
+  border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
+  padding-bottom: var(--sys-size-5);
+}
+
+.lcp-element:not(:empty) {
+  padding: inherit;
 }
