[RPP] Add 'Est savings' for all relevant insights
Also adds support for byte savings, and for showing both time and byte
savings at the same time.

Bug: 368524523
Change-Id: I8db4e272dd81c72d31e204b99d2ce92381f3f49f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5906618
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>
Auto-Submit: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -133,6 +133,7 @@ dd.dl-title {
 
 .insight-savings {
   font-weight: var(--ref-typeface-weight-bold);
+  color: var(--sys-color-green);
 }
 
 ul.insight-icon-results {
